--- a/html.html
+++ b/html.html
@@ -97,6 +97,12 @@
 
             </div>
 
+            <h1>Starting the first code in HTML</h1>
+
+            <h2>by typing the first line of code we have this image.</h2>
+
+            <img src="img/boiler.png" alt="starting">
+
     </section>
 
 
