--- a/home.html
+++ b/home.html
@@ -42,11 +42,7 @@
             <a href="css.html" class="btn btn-info" role="button">Css</a>
             <a href="javaScript.html" class="btn btn-info" role="button">Java Script</a>
 
-
-
-
             <img class="social-media" src="img/social.png" alt="icon-social-media">
-
 
         </div>
     </header>
@@ -56,7 +52,7 @@
             <br>
             <h1>What is Client-side Programming?</h1><br>
 
-            <h2>Find out more about client-side programming.</h2>
+            <h2>Client-side programming stand for!</h2>
             <p>client side program is the front-end that runs on a client it is interactive and can run with different
                 functions and dinamicly execute information on the screen </p>
             <p>Client-side programming can also send information to a server such as retrieving data from a sever, save
