--- a/html.html
+++ b/html.html
@@ -19,7 +19,6 @@
 
 <body>
     <!-- jumbotron -->
-
     <div class="jumbotron">
         <div class="jumbotron" style="background-image: url(img/capa.jpeg); background-size: 100%;">
             <div class="container for-about">
@@ -28,8 +27,9 @@
             </div>
         </div>
     </div>
+    <!--Navbar-->
     <div class="topnav">
-        
+
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <input type="text" placeholder="Search..">
@@ -37,6 +37,7 @@
 
     <header class="Home-Page">
         <div class="header1">
+            <!--bottoms to the top page-->
             <br>
             <a href="home.html" class="btn btn-info" role="button">Home Page</a>
             <a href="html.html" class="btn btn-info" role="button">Html</a>
@@ -49,13 +50,14 @@
     </header>
     <section>
         <div class=>
+            <!--Beginning of the text-->
             <br>
             <h1>HTML meaning</h1>
             <br>
             <div style="clear: left;">
-
+                <!--Used to align texts next to the image-->
                 <p style="float: left;"><img src="img/html-icon.png" height="200" width="200"></p>
-
+                <!--begginning of the text and informations-->
                 <p>The Hypertext Markup Language (HTML) is the standard markup language for documents designed to be
                     displayed
                     in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and
@@ -92,23 +94,32 @@
                     certain way, or act a certain way. The enclosing tags can make a word or image hyperlink to
                     somewhere else, can italicize words, can make the font bigger or smaller, and so on. For example,
                     take the following line of content.</p>
+                <!--image associated to the hyperlink-->
                 <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/HTML_basics">Click
                     here for more informations!</a>
 
             </div>
-
+            <!--second part of the text-->
             <h1>Starting the first code in HTML</h1>
 
             <h2>by typing the first line of code we have this image.</h2>
-
-            <img src="img/boiler.png" alt="starting">
-
+            <div class="img-middle">
+                <img src="img/boiler.png" alt="starting">
+            </div>
+            <br>
+            <h1>HTML: Strucure/content</h1>
+            <p><b>HTML</b>, or HyperText Markup Language, is the backbone of any webpage. It determines its basic
+                structure and
+                content. However, if you only use HTML, your webpage will end up looking like the very first pages from
+                the early days of the web. No pretty formatting, no interactive elements. You’ll see it sometimes when
+                your internet connection is very slow and your browser won’t load the page properly. It’s okay, but we
+                can to better. That’s what CSS is for.</p>
     </section>
 
-
+    <!--footer page to the bottom of the page -->
     <footer class="footer">
         <div class="footer-bottom">
-            
+
             <p>copyright &copy;2021 codeHtml.designed by <span>Renner</span></p>
             <p>2020382@student.cct.ie</p>
         </div>
