--- a/home.html
+++ b/home.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>CA Html</title>
+    <title>Html web page</title>
     <!--bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -77,11 +76,11 @@
 
             <div class="img-all">
 
-                <img src="img/html-css-js.jpeg" alt="all-together">
+                <img src="img/html-css-js.jpeg" class="all-together">
 
             </div>
 
-            <h1>In short we can say:</h1>
+            <h2>In short we can say:</h2>
             <p>HTML: Human body comprising bones (skeleton) and the flesh
 
                 CSS: Clothes, Shoes, Perfume, Shades, Lipstick, Mascara, Foundation and every other thing that makes you
@@ -99,7 +98,7 @@
                 And you know you clothes cannot wear themselves, right, anger cannot put on clothes either, so you need
                 the figure (HTML).</p>
         </div>
-        <h1>Find out more!</h1>
+        <h2>Find out more!</h2>
 
 
         <a href="https://pt.wikipedia.org/wiki/Linguagem_client-side">Click
