--- a/html.html
+++ b/html.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<html>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,7 +47,7 @@
         </div>
     </header>
     <section>
-        <div class=>
+        <div class="class">
             <!--Beginning of the text-->
             <br>
             <h1>HTML meaning</h1>
@@ -100,11 +98,11 @@
 
             </div>
             <!--second part of the text-->
-            <h1>Starting the first code in HTML</h1>
+            <h2>Starting the first code in HTML</h1>
 
             <h2>by typing the first line of code we have this image.</h2>
             <div class="img-middle">
-                <img src="img/boiler.png" alt="starting">
+                <img src="img/boiler.png" class="starting">
             </div>
             <br>
             <h1>HTML: Strucure/content</h1>
@@ -114,8 +112,7 @@
                 the early days of the web. No pretty formatting, no interactive elements. You’ll see it sometimes when
                 your internet connection is very slow and your browser won’t load the page properly. It’s okay, but we
                 can to better. That’s what CSS is for.</p>
-    </section>
-
+    </section>  
     <!--footer page to the bottom of the page -->
     <footer class="footer">
         <div class="footer-bottom">
