--- a/css.html
+++ b/css.html
@@ -30,27 +30,28 @@
             </div>
         </div>
     </div>
+    <!--navbar-->
     <div class="topnav">
+        <!--informations sobre-->
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
         <input type="text" placeholder="Search..">
     </div>
     <header class="Home-Page">
+        <!--Buttons -->
         <div class="header1"> <br>
             <a href="home.html" class="btn btn-info" role="button">Home Page</a>
             <a href="html.html" class="btn btn-info" role="button">Html</a>
             <a href="css.html" class="btn btn-info" role="button">Css</a>
             <a href="javaScript.html" class="btn btn-info" role="button">Java Script</a>
             <br>
-
-
+            <!--image at left side-->
             <img class="social-media" src="img/social.png" alt="icon-social-media">
-
-
         </div>
-
+        <!--contain all texts and images thumbnails-->
         <div class="container">
             <br>
+            <!--list of text-->
             <h2>Css meaning</h2>
             <ul>
                 <li>Css stand for cascading style sheets</li>
@@ -59,12 +60,14 @@
                 <li>External stylesheets are stored in CSS files</li>
             </ul>
             <br>
+            <!--image boxes next to the others-->
             <div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail">
                         <a href="img/css-page1.png" target="_blank">
                             <img src="img/css-page1.png" alt="Lights" style="width:100%">
                             <div class="caption">
+                                <!--texts above the images-->
                                 <p>We use the css styling to edit our webpage, margin, padding, width, height.</p>
                             </div>
                         </a>
@@ -75,6 +78,7 @@
                         <a href="img/css-page2.jpeg" target="_blank">
                             <img src="img/css-page2.jpeg" alt="Nature" style="width:100%">
                             <div class="caption">
+                                <!--texts above the images-->
                                 <p>CSS is a style sheet language used to describe the presentation of a document written
                                     in a markup language (such as HTML or XML). It stands for Cascading Style Sheets and
                                     is used to define styles for your web pages, including the design, layout and
@@ -88,7 +92,11 @@
                         <a href="img/css-page3.jpeg" target="_blank">
                             <img src="img/css-page3.jpeg" alt="Fjords" style="width:100%">
                             <div class="caption">
-                                <p>Lorem ipsum donec id elit non mi porta gravida at eget metus.</p>
+                                <!--texts above the images-->
+                                <p>CSS can be used to define the cell padding of table cells, the style, thickness, and
+                                    color of a table's border, and the padding around images or other objects. CSS gives
+                                    Web developers more exact control over how Web pages will look than HTML does. This
+                                    is why most Web pages today incorporate cascading style sheets.</p>
                             </div>
                         </a>
                     </div>
@@ -105,7 +113,7 @@
 
 
     </section>
-
+    <!--footer page to the bottom of the page -->
     <footer class="footer">
         <div class="footer-bottom">
 
