--- a/home.html
+++ b/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!--My CSS-->
-
     <link rel="stylesheet" href="css/style.css">
     <!--Boostratp JS-->
     <script src="js/script.js"></script>
 </head>
 
 <body>
-    <!-- jumbotron -->
-
+    <!-- jumbotron to add the image box on top-->
     <div class="jumbotron">
         <div class="jumbotron" style="background-image: url(img/capa.jpeg); background-size: 100%;">
             <div class="container for-about">
@@ -33,7 +32,7 @@
         <a href="#contact">Contact</a>
         <input type="text" placeholder="Search..">
     </div>
-
+    <!--Bottons to the homepage goes inside the head-->
     <header class="Home-Page">
         <div class="header1"><br>
             <a href="home.html" class="btn btn-info" role="button">Home Page</a>
@@ -46,6 +45,7 @@
         </div>
     </header>
     <section>
+        <!--Created new class for texts-->
         <div class="text">
 
             <br>
@@ -75,11 +75,11 @@
                 changes to the html).</li>
 
             <div class="img-all">
-
+                <!--images-->
                 <img src="img/html-css-js.jpeg" class="all-together">
 
             </div>
-
+            <!--Box text and mening-->
             <h2>In short we can say:</h2>
             <p>HTML: Human body comprising bones (skeleton) and the flesh
 
@@ -98,15 +98,13 @@
                 And you know you clothes cannot wear themselves, right, anger cannot put on clothes either, so you need
                 the figure (HTML).</p>
         </div>
+
         <h2>Find out more!</h2>
-
-
+        <!--link of the website support , for reference-->
         <a href="https://pt.wikipedia.org/wiki/Linguagem_client-side">Click
             here for more</a>
     </section><br>
-
-
-
+    <!--Footer with contacts and information about the designer of the code-->
     <footer class="footer">
         <div class="footer-bottom">
 
